<resources>
    <string name="app_name">Smart Ringer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sensitivity">noise level sensitivity</string>
    <string name="low">low</string>
    <string name="med">medium</string>
    <string name="high">high</string>
    <string name="save">save</string>
    <string name="start_test">start test</string>
    <string name="stop_test">stop test</string>
    <string name="settings_saved">Settings saved</string>
</resources>
